--- a/CLC/faculty.html
+++ b/CLC/faculty.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <header>
-                <img src="logo.png" alt="logo" class="fixed-logo">
+                <img src="images/logo.png" alt="logo" class="fixed-logo">
             
             <ul>
                 <li><a href="ar.html" target="_blank">
-                    <img src="ar.jpg" width="200px">
+                    <img src="images/ar.jpg" width="200px">
                     <span>Hilbert Ron Anjou</span>
                 </a></li>
                 <div class="context">
@@ -19,7 +19,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="nf.html" target="_blank">
-                    <img src="nf.jpg" width="200px">
+                    <img src="images/nf.jpg" width="200px">
                     <span>Nicholas Flamel</span>
                 </a></li>
                 <div class="context">
@@ -28,7 +28,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="nl.html" target="_blank">
-                    <img src="nl.jpg" width="200px">
+                    <img src="images/nl.jpg" width="200px">
                     <span>Norma Lawrence/EVA</span>
                 </a></li>
                 <div class="context">
@@ -37,7 +37,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="vs.html" target="_blank">
-                    <img src="vs.jpg" width="200px">
+                    <img src="images/vs.jpg" width="200px">
                     <span>Von Schneider</span>
                 </a></li>
                 <div class="context">
@@ -46,7 +46,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="g.html" target="_blank">
-                    <img src="g.jpg" width="200px">
+                    <img src="images/g.jpg" width="200px">
                     <span>Guderian</span>
                 </a></li>
                 <div class="context">
@@ -55,7 +55,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="grm.html" target="_blank">
-                    <img src="grm.jpg" width="200px">
+                    <img src="images/grm.jpg" width="200px">
                     <span>Gerd Rudolf Manstein</span>
                 </a></li>
                 <div class="context">
@@ -64,7 +64,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="mr.html" target="_blank">
-                    <img src="nl.jpg" width="200px">
+                    <img src="images/nl.jpg" width="200px">
                     <span>Mance Rundstedt</span>
                 </a></li>
                 <div class="context">
@@ -73,7 +73,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="mt.html" target="_blank">
-                    <img src="mt.jpg" width="200px">
+                    <img src="images/mt.jpg" width="200px">
                     <span>Masashi Toyama</span>
                 </a></li>
                 <div class="context">
