--- a/CLC/BP.html
+++ b/CLC/BP.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-                <img src="logo.png" alt="logo" class="fixed-logo">
+                <img src="images/logo.png" alt="logo" class="fixed-logo">
             
             <ul>
                 <div class="con_title">
@@ -14,6 +14,7 @@
                 </div>
                 <div style="margin-top: 100px;"></div>
                 <div class="context">
+                    <!--- Context: BP.html -->
                     <p>After opening the "Bronze Program", Lumingfei and other trainees were dispatched to carry out this mission, carrying the "Moniach" to the Three Gorges in China to fight against one of the Four Great Monarchs, the King of Bronze and Fire - Norton, and finally succeeded in killing him. -Norton, one of the four great monarchs, and finally killed him.</p>
                 </div>
             </ul>
