--- a/CLC/CLC.html
+++ b/CLC/CLC.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+    <!--- Title: CLC.html -->
     <title>CASSELL COLLEGE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <!--- Header: CLC.html -->
         <div class="main">
             <dir class="logo">
-                <img src="logo.png" alt="logo" width="100" height="100">
+                <img src="images/logo.png" alt="logo" width="100" height="100">
             </dir>
             <ul>
+                <!--- Navigation: CLC.html -->
                 <li class="active"><a href="#">Academics and Admissions</a>
                     <div class="sub-menu">
                         <ul>
+                            <!--- Submenu: CLC.html -->
                     <li><a href="undgrd.html">Undergraduate</a>
                         <li><a href="major.html">Major</a>
                             <li><a href="rgla.html">Regulations</a>
                         </ul>
                     </div>
                 </li>
+                <!--- Submenu: CLC.html -->
                 <li><a href="#">News&Event</a>
                     <div class="sub-menu">
                         <ul>
+                            <!--- Submenu: CLC.html -->
                     <li><a href="nw.html">Night's Watch</a>
                         <li><a href="events.html">Events</a>
                         </ul>
                     </div>
                 </li>
+                <!--- Submenu: CLC.html -->
                 <li><a href="#">College structure</a>
                     <div class="sub-menu">
                         <ul>
@@ -58,10 +65,12 @@
             </li>
             </ul>
         </div>
+        <!--- Header: CLC.html -->
         <div class="title">
             <h1>CASSELL COLLEGE</h1>
         </div>
         <div class="button">
+            <!--- Button: CLC.html -->
             <a href="apply.html" class="btn">APPLY</a>
             <a href="myclc.html" class="btn">myCLC</a>
         </div>
