--- a/CLC/bdg.html
+++ b/CLC/bdg.html
@@ -8,9 +8,10 @@
     <header>
         <div class="main">
             <div class="logo">
-                <img src="logo.png" alt="logo" width="100" height="100">
+                <img src="images/logo.png" alt="logo" width="100" height="100">
             </div>
             <ul>
+                <!--- Navigation: bdg.html -->
                 <li><a href="ths.html" target="_blank">
                     <img src="1.jpg" width="200px">
                     <span>Temple of the Holy Spirit</span>
