--- a/CLC/grm.html
+++ b/CLC/grm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-                <img src="logo.png" alt="logo" class="fixed-logo">
+                <img src="images/logo.png" alt="logo" class="fixed-logo">
             
             <ul>
                 <div class="con_title">
