--- a/CLC/myclc.html
+++ b/CLC/myclc.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <img src="logo.png" alt="logo" class="fixed-logo">
+        <img src="images/logo.png" alt="logo" class="fixed-logo">
     </header>
 
     <div class="wrapper">
