--- a/CLC/nh.html
+++ b/CLC/nh.html
@@ -8,7 +8,7 @@
     <header>
         <div class="main">
             <div class="logo">
-                <img src="logo.png" alt="logo" width="100" height="100">
+                <img src="images/logo.png" alt="logo" width="100" height="100">
             </div>
         </div>
         <div class="content">
