Your commit message

--- a/CLC/html/bdg.html
+++ b/CLC/html/bdg.html
@@ -14,27 +14,27 @@
             <ul>
                 <!--- Navigation: bdg.html -->
                 <li><a href="ths.html" target="_blank">
-                    <img src="images/1.jpg" width="200px">
+                    <img src="../images/1.jpg" width="200px">
                     <span>Temple of the Holy Spirit</span>
                 </a></li>
                 <li><a href="ice.html" traget="_blank">
-                    <img src="images/2.jpg" width="200px">
+                    <img src="../images/2.jpg" width="200px">
                     <span>Icehouse</span>
                 </a></li>
                 <li><a href="twa.html" target="_blank">
-                    <img src="images/3.jpg" width="200px">
+                    <img src="../images/3.jpg" width="200px">
                     <span>The Well of Annihilation</span>
                 </a></li><br>
                 <li><a href="nh.html" target="_blank">
-                    <img src="images/4.jpg" width="200px">
+                    <img src="../images/4.jpg" width="200px">
                     <span>Norton Hall</span>
                 </a></li>
                 <li><a href="ah.html" target="_blank">
-                    <img src="images/5.jpg" width="200px">
+                    <img src="../images/5.jpg" width="200px">
                     <span>Ambergris Hall</span>
                 </a></li>
                 <li><a href="l.html" target="_blank">
-                    <img src="images/6.jpg" width="200px">
+                    <img src="../images/6.jpg" width="200px">
                     <span>Library</span>
                 </a></li>
             </ul>
