--- a/CLC/html/faculty.html
+++ b/CLC/html/faculty.html
@@ -11,7 +11,7 @@
             
             <ul>
                 <li><a href="ar.html" target="_blank">
-                    <img src="images/ar.jpg" width="200px">
+                    <img src="../images/ar.jpg" width="200px">
                     <span>Hilbert Ron Anjou</span>
                 </a></li>
                 <div class="context">
@@ -20,7 +20,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="nf.html" target="_blank">
-                    <img src="images/nf.jpg" width="200px">
+                    <img src="../images/nf.jpg" width="200px">
                     <span>Nicholas Flamel</span>
                 </a></li>
                 <div class="context">
@@ -29,7 +29,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="nl.html" target="_blank">
-                    <img src="images/nl.jpg" width="200px">
+                    <img src="../images/nl.jpg" width="200px">
                     <span>Norma Lawrence/EVA</span>
                 </a></li>
                 <div class="context">
@@ -38,7 +38,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="vs.html" target="_blank">
-                    <img src="images/vs.jpg" width="200px">
+                    <img src="../images/vs.jpg" width="200px">
                     <span>Von Schneider</span>
                 </a></li>
                 <div class="context">
@@ -47,7 +47,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="g.html" target="_blank">
-                    <img src="images/g.jpg" width="200px">
+                    <img src="../images/g.jpg" width="200px">
                     <span>Guderian</span>
                 </a></li>
                 <div class="context">
@@ -56,7 +56,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="grm.html" target="_blank">
-                    <img src="images/grm.jpg" width="200px">
+                    <img src="../images/grm.jpg" width="200px">
                     <span>Gerd Rudolf Manstein</span>
                 </a></li>
                 <div class="context">
@@ -65,7 +65,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="mr.html" target="_blank">
-                    <img src="images/nl.jpg" width="200px">
+                    <img src="../images/nl.jpg" width="200px">
                     <span>Mance Rundstedt</span>
                 </a></li>
                 <div class="context">
@@ -74,7 +74,7 @@
 
                 <div style="margin-top: 80px;"></div>
                 <li><a href="mt.html" target="_blank">
-                    <img src="images/mt.jpg" width="200px">
+                    <img src="../images/mt.jpg" width="200px">
                     <span>Masashi Toyama</span>
                 </a></li>
                 <div class="context">
